syntax = "proto3";
package qgenda ;
import "google/protobuf/timestamp.proto";
import "gogo/protobuf/gogoproto/gogo.proto";
// import "github.com/gogo/protobuf@v1.3.2";
// option go_package = "protobuf";

// protoc --go_out=. *.proto // uses official goprotobuf
// protoc --go_out=plugins=grpc:. *.proto // official with grpc support
// protoc --gofast_out=. *.proto // uses gogoprotobuf

message Company {
	string id = 1  [json_name="id"]; 
	//(gogoproto.customtype) = "github.com/gogo/protobuf/test/custom.Uint128"
	string name = 2 ; 
	string abbreviation = 3; 
	google.protobuf.Timestamp createdtime = 4; 
	string location = 5 ; 
	string phonenumber = 6; 
	repeated Profile profile = 7; 
	repeated Organization organization = 8; 
}

// Profile appears to link a user role to a company...
message Profile {
	string name = 1 ; 
	string key = 2 ; 
	bool admin = 3 ; 
 }

// Organization appears to linke multiple companies and users
message Organization {
	string name = 1 ; 
	string key = 2 ; 
}


// StaffMember represents staff, and possibly some other entities as well?
message StaffMember {
	string	abbreviation = 1 ;
	string	BackgroundColor = 2 ; //    `json:"BgColor"`
	string	BillingSystemID = 3 ; //  `json:"BillSysId,omitempty"`
	string	CalendarSyncID = 4 ; //   `json:"CalSyncKey,omitempty"`
	string	CompanyID = 5 ; // `json:"CompKey,omitempty"`
	string	Email = 6 ; //   `json:"Email"`
	string	EMRID = 7 ; //  `json:"EmrId"`
	string	ERPID = 8 ; //      `json:"ErpId"`
	google.protobuf.Timestamp	EndDate = 9 ; //        `json:"EndDate"`
	string	ExternalCallSystemID = 10 ; //      `json:"ExtCallSysId,omitempty"`
	string	FirstName = 11 ; //      `json:"FirstName"`
	string	HomePhone = 12 ; //      `json:"HomePhone"`
	string	LastName = 13 ; //      `json:"LastName"`
	string	MobilePhone = 14 ; //      `json:"MobilePhone"`
	string	NPI = 15 ; //      `json:"Npi"`
	string	PagerNumber = 16 ; //      `json:"Pager"`
	string	PayrollID = 17 ; //      `json:"PayrollId"`
	string	RegularHours = 18 ; //      `json:"RegHours"`
	string	Alias = 19 ; //      `json:"StaffId"`
	string	ID = 20 ; //   `json:"StaffKey,omitempty"`
	google.protobuf.Timestamp	StartDate = 21 ; //        `json:"StartDate"`
	string	TextColor = 22 ; //      `json:"TextColor"`
	bool	Active = 23 ; //        `json:"IsActive"`
	string	StaffType = 24 ; //      `json:"StaffTypeKey"`
	string	BillingType = 25 ; //      `json:"BillingTypeKey"`
	string	ProfileID = 26 ; //   `json:"UserProfileKey,omitempty"`
	string	Profile = 27 ; //      `json:"UserProfile"`
	google.protobuf.Timestamp	PayrollStartDate = 28 ; //        `json:"PayrollStartDate"`
	google.protobuf.Timestamp	PayrollEndDate = 29 ; //        `json:"PayrollEndDate"`
	google.protobuf.Timestamp	TimeClockStartDate = 30 ; //        `json:"TimeClockStartDate"`
	google.protobuf.Timestamp	TimeClockEndDate = 31 ; //        `json:"TimeClockEndDate"`
	string	TimeClockKioskPIN = 32 ; //      `json:"TimeClockKioskPIN"`
	bool	AutoApproveSwap = 33 ; //        `json:"IsAutoApproveSwap"`
	bool	Viewable = 34 ; //        `json:"IsViewable"`
	bool	Schedulable = 35 ; //        `json:"IsSchedulable"`
	google.protobuf.Timestamp	Test = 36 ; //        `json:"UserLastLoginDateTimeUtc"`
	message Address = 37 ;
	message LastLogin = 38 ;
	repeated message SkillSet = 39 ;
	repeated message Tag = 40 ;
	repeated message TTCMTag = 41 ;
}

message Tag 
"Tags": [
	{
	  "CategoryKey": 10448,
	  "CategoryName": "Division",
	  "Tags": [
		{
		  "Key": 46335,
		  "Name": "MSK"
		}
	  ]
	}
  ],
  "TTCMTags": [
	{
	  "CategoryKey": 10449,
	  "CategoryName": "Task Type",
	  "Tags": [
		{
		  "Key": 46340,
		  "Name": "Fellow",
		  "EffectiveFromDate": "0001-01-01T00:00:00",
		  "EffectiveToDate": "9999-12-31T00:00:00"
		}
	  ]
	}
  ],


Address              struct {
	string	Line1 = ; //   `json:"Addr1"`
	string	Line2 = ; //   `json:"Addr2"`
	string	City = ; //   `json:"City"`
	string	State = ; //   `json:"State"`
	string	Zip = ; //   `json:"Zip"`
}
LastLogin struct {
	google.protobuf.Timestamp	   TimeUTC = ; //   `json:"UserLastLoginDateTimeUtc"`
	string	Source = ; //    `json:"SourceOfLogin"`
}
SkillSet []SkillSet = ; //   `json:"Skillset"`

// The don't appear to be used at our insitution, not sure if they are elsewhere
// omitting due to inability to validate
// `json:"Tags"`
// TTCMTags `json:"TTCMTags"`
// `json:"CategoryKey"`
// `json:"CategoryName"`
// Tags `json:"Tags"`
// `json:"Key"`
// `json:"Name"`
// `json:"EffectiveFromDate"`
// `json:"EffectiveToDate"`
// `json:"Profiles"`
// `json:"Name"`
// `json:"ProfileKey"`
// `json:"DailyUnitAverage"` // don't waste your time on this

// SkillSet captures the staff to task relationship
message SkillSet {
	Staff struct {
		string	FirstName `json:"StaffFirstName"`
		string	LastName `json:"StaffLastName"`
		string	Abbreviation `json:"StaffAbbreviation"`
		string	Alias `json:"StaffId"`
	}
	Task struct {
		string	Name `json:"TaskName"`
		string	Abbreviation `json:"TaskAbbrev"`
		string	Alias `json:"TaskId"`
	}
	Monday struct {
		bool	valid   `json:"IsSkilledMon"`
		string	frequency `json:"MonOccurrence"`
	}
	Tuesday struct {
		bool	valid   `json:"IsSkilledTue"`
		string	frequency `json:"TueOccurrence"`
	}
	Wednesday struct {
		bool	valid   `json:"IsSkilledWed"`
		string	frequency `json:"WedOccurrence"`
	}
	Thursday struct {
		bool	valid   `json:"IsSkilledThu"`
		string	frequency `json:"ThuOccurrence"`
	}
	Friday struct {
		bool	valid   `json:"IsSkilledFri"`
		string	frequency `json:"FriOccurrence"`
	}
	Saturday struct {
		bool	valid   `json:"IsSkilledSat"`
		string	frequency `json:"SatOccurrence"`
	}
	Sunday struct {
		bool	valid   `json:"IsSkilledSun"`
		string	frequency `json:"SunOccurrence"`
	}
}
